tests/base/invalid/Return_CompileFail_3.whiley
import whiley.lang.*:*

bool f(int x, int y):
    return x+y
